--- a/package.json
+++ b/package.json
@@ -12,16 +12,19 @@
     "expo": "~46.0.9",
     "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
+    "native-base": "^3.4.13",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.5",
-    "react-native-web": "~0.18.7"
+    "react-native-web": "~0.18.7",
+    "react-native-svg": "12.3.0",
+    "react-native-safe-area-context": "4.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
-    "typescript": "^4.6.3",
     "@types/react": "~18.0.0",
-    "@types/react-native": "~0.69.1"
+    "@types/react-native": "~0.69.1",
+    "typescript": "^4.6.3"
   },
   "private": true
 }
