--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
     "native-base": "^3.4.13",
+    "phosphor-react-native": "^1.1.2",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.5",
