--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "expo-font": "~10.2.0",
     "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
+    "firebase": "9.6.11",
     "native-base": "^3.4.13",
     "phosphor-react-native": "^1.1.2",
     "react": "18.0.0",
