--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.5",
+    "react-native-dotenv": "^3.3.1",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-svg": "12.3.0",
@@ -31,6 +32,7 @@
     "@babel/core": "^7.12.9",
     "@types/react": "~18.0.0",
     "@types/react-native": "~0.69.1",
+    "@types/react-native-dotenv": "^0.2.0",
     "react-native-svg-transformer": "^1.0.0",
     "typescript": "^4.6.3"
   },
